<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="hf_no_number"
    android:background="@color/black_transparent">

    <LinearLayout
        android:id="@+id/account_bg"
        android:layout_width="460dip"
        android:layout_height="340dip"
        android:layout_centerInParent="true"
        android:layout_marginEnd="0dp"
        android:background="#D5D5D5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#87CEEB"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/watt_logo_icon" />

            </LinearLayout>

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="3">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/image_viewer"
                            android:layout_width="300dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/gallary_icon_item"
                            android:padding="20dp"
                            android:text="@string/imageviewer"
                            android:background="@drawable/round_box_item"
                            android:textColor="@color/black"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/Url_image_viewer"
                            android:layout_width="300dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/url_image_icon_item"
                            android:padding="20dp"
                            android:text="@string/urlImageViewer"
                            android:background="@drawable/round_box_item"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/pdf_viewer"
                            android:layout_width="300dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/pdf_icon_item"
                            android:padding="20dp"
                            android:text="@string/pdfViewer"
                            android:background="@drawable/round_box_item"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>